--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-{{ panel.draw()|safe }}
+<h1>Edit Profile</h1>
+{{ wtf.quick_form(form) }}
 {% endblock %}
